--- a/core/templates/dev/head/components/rule_editor.html
+++ b/core/templates/dev/head/components/rule_editor.html
@@ -158,18 +158,23 @@
     <rule-type-selector class="protractor-test-rule-description" local-value="currentRuleDefinition.name" on-selection-change="onSelectNewRuleType" can-add-default-rule="canAddDefaultRule()">
     </rule-type-selector>
 
-    <span ng-repeat="item in ruleDescriptionFragments track by $index" class="form-group protractor-test-rule-description-fragment" style="margin-right: 5px;">
-      <span ng-if="item.type == 'select'" style="color: black;">
-        <select class="form-control" ng-model="currentRuleDefinition.inputs[item.varName]" ng-options="choice.id as (choice.val|convertRuleChoiceToPlainText|truncate) for choice in ruleDescriptionChoices" style="max-width: 250px;">
-        </select>
-      </span>
+    <span ng-if="!getCustomRuleTemplate(currentRuleDefinition.name)">
+      <span ng-repeat="item in ruleDescriptionFragments track by $index" class="form-group protractor-test-rule-description-fragment" style="margin-right: 5px;">
+        <span ng-if="item.type == 'select'" style="color: black;">
+          <select class="form-control" ng-model="currentRuleDefinition.inputs[item.varName]" ng-options="choice.id as (choice.val|convertRuleChoiceToPlainText|truncate) for choice in ruleDescriptionChoices" style="max-width: 250px;">
+          </select>
+        </span>
 
-      <span ng-if="item.type != 'select' && item.type != 'noneditable'">
-        <object-editor obj-type="<[item.type]>" is-editable="isEditable" always-editable="true" value="currentRuleDefinition.inputs[item.varName]" style="color: black;"></object-editor>
-      </span>
-      <span ng-if="item.type == 'noneditable'">
-        <[item.text]>
+        <span ng-if="item.type != 'select' && item.type != 'noneditable'">
+          <object-editor obj-type="<[item.type]>" is-editable="isEditable" always-editable="true" value="currentRuleDefinition.inputs[item.varName]" style="color: black;"></object-editor>
+        </span>
+        <span ng-if="item.type == 'noneditable'">
+          <[item.text]>
+        </span>
       </span>
     </span>
+
+    <custom-rule-template ng-if="getCustomRuleTemplate(currentRuleDefinition.name)">
+    </custom-rule-template>
   </form>
 </script>
